--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trần Đình Chương - Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
 
+        h1 {
+            color: #333;
+        }
+
+        h2 {
+            color: #555;
+        }
+
+        p {
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Trần Đình Chương</h1>
+        <p>Thành phố Hồ Chí Minh, Việt Nam</p>
+    </header>
+
+    <section id="education">
+        <h2>Học Vấn và Kỹ Năng</h2>
+        <p><strong>Trình Độ Học Vấn:</strong> Đại học</p>
+        <p><strong>Ngành Học:</strong> Chuyên ngành Cơ Điện Tử</p>
+        <p><strong>Kỹ Năng Chính:</strong> Hardware Engineer, Firmware Engineer, Software Development, AUTOSAR Test Engineer, AUTOSAR Engineer, BootLoader Engineer, Kỹ năng quản lý kinh doanh</p>
+    </section>
+
+    <section id="contact">
+        <h2>Liên Lạc</h2>
+        <p><strong>Email:</strong> ChuongTD4@gmail.com</p>
+        <p><strong>Số Điện Thoại:</strong> 0868967375</p>
+    </section>
+
+    <section id="career">
+        <h2>Lĩnh Vực Nghề Nghiệp</h2>
+        <p><strong>Mục tiêu nghề nghiệp:</strong> Tìm kiếm cơ hội phát triển sự nghiệp trong lĩnh vực Cơ Điện Tử, đặc biệt là trong các vai trò Hardware Engineer, Firmware Engineer, và Software Development.</p>
+    </section>
+
+</body>
+</html>
